@@ -18,7 +18,7 @@ importFrom("survival", "survfit", "Surv")
 importFrom("graphics", "plot", "lines", "polygon")
 
 export(tram, tram_data, Coxph, Aareg, Colr, Polr, Lm, BoxCox, Survreg, Lehmann, 
-       mtram, score_test, perm_test, PI)
+       mtram, score_test, perm_test, PI, mtram)
 
 S3method("as.mlt", "tram")
 S3method("model.matrix", "tram")
@@ -45,3 +45,9 @@ S3method("score_test", "tram")
 S3method("perm_test", "tram")
 S3method("confint", "htest")
 S3method("confint", "htests")
+
+S3method("logLik", "mmlt")
+S3method("coef", "mmlt")
+S3method("predict", "mmlt")
+
+
